ability to disconnect a connected session
lint fix

Squashing all commits

comiting progress

updating successful connection label

pushing progress so far

allow disconnection when wallet connection session exists

checkpoint for printing connector object to console

i have no idea why this needs to be committed

investigations with serialisation and reverse

cleanup

removing un-necessary code

remove console log

Revert "i have no idea why this needs to be committed"

This reverts commit ebd1a9e690929f3b8a7c37b1c8f4e396264f5b90.

wip adding new sheet popup for wallet connections

finalized ui view to show existing connections

This is still a WIP and will need work as soon as business logic is completed

reviews

--- a/translations/en.json
+++ b/translations/en.json
@@ -1741,6 +1741,7 @@
     "wallet-manage-app-connections": "Manage app connections",
     "connection-request": "Connection Request",
     "disconnect": "Disconnect",
+    "app-connections": "App connections",
     "new-ui": "New UI",
     "send-contact-request-message": "To start a chat you need to become contacts",
     "contact-request": "Contact request",
@@ -1754,8 +1755,8 @@
     "contact-request-pending": "Pending...",
     "removed-from-contacts": "Removed from contacts",
     "mutual-contact-requests": "Mutual contact requests",
-    "pending": "Pending",
     "negative": "Negative",
     "positive": "Positive",
-    "public": "Public"
+    "public": "Public",
+    "successful-connection": "Successful Connection"
 }
