--- a/translations/ja.json
+++ b/translations/ja.json
@@ -12,6 +12,7 @@
     "accept-and-share-address": "受け取りアドレスを送る",
     "accept-new-chats-from": "新規チャットを許可 ",
     "accept-status-tos-prefix": "Statusを受け入れる",
+    "accepted": "追加されました",
     "access-existing-keys": "既存の鍵で復元する",
     "access-key": "アクセスキー",
     "account-added": "アカウントを追加しました",
@@ -248,6 +249,7 @@
     "community-color-placeholder": "色を選ぶ",
     "community-edit-title": "コミュニティの編集",
     "community-emoji-thumbnail-title": "サムネイル",
+    "community-image-delete": "Empty",
     "community-image-pick": "画像を選ぶ",
     "community-image-remove": "削除",
     "community-image-take": "写真を撮る",
@@ -290,6 +292,11 @@
     "connection-with-the-card-lost-setup-text": "セットアップを再開するにはカードをスマートフォンの背面に当てたままにしてください",
     "connection-with-the-card-lost-text": "セットアップを再開するにはカードをスマートフォンの背面に当てたままにしてください",
     "contact-code": "チャットキー",
+    "contact-request": "友だちリクエスト",
+    "contact-request-accepted": "追加されました ✓",
+    "contact-request-declined": "却下されました ⓧ",
+    "contact-request-header": "👋 友だちリクエスト",
+    "contact-request-pending": "依頼中...",
     "contact-s": {
         "other": "の連絡先"
     },
@@ -463,6 +470,7 @@
     "datetime-yesterday": "昨日",
     "decimals": "小数点桁数",
     "decline": "取り消す",
+    "declined": "却下されました",
     "decryption-failed-content": "データを復号化できませんでした。「適用」をタップして古いデータを削除し新しいアカウントを作成し直すか、「キャンセル」を押してもう一度やり直してください。",
     "default": "デフォルト",
     "default-assets": "ERC20・ERC721トークン",
@@ -640,7 +648,6 @@
     "error-unable-to-get-token-balance": "トークン残高を取得できません",
     "errors": "エラー",
     "eth": "ETH",
-    "ethereum-account": "イーサリアムアカウント",
     "ethereum-address": "イーサリアムアドレス",
     "ethereum-node-started-incorrectly-description": "イーサリアムノードが誤った設定で起動されたため、アプリケーションを停止しています。ネットワークIDは{{network-id}}に設定されていますが、正しくは{{fetched-network-id}}です。",
     "ethereum-node-started-incorrectly-title": "イーサリアムノードが正しく起動できませんでした",
@@ -958,6 +965,7 @@
     "mailserver-request-retry": "リクエストを再試行する",
     "mailserver-retry": "再試行",
     "mailserver-title": "Statusノード",
+    "main-account": "メインアカウント",
     "main-currency": "メイン通貨",
     "main-networks": "メインネット",
     "main-wallet": "メインウォレット",
@@ -1040,6 +1048,7 @@
     "multiaccounts-recover-enter-phrase-text": "12、15、18、21、または24単語。各単語はシングルスペースで区切ってください。",
     "multiaccounts-recover-enter-phrase-title": "シードフレーズを入力",
     "mute": "ミュート",
+    "mutual-contact-requests": "友だちリクエスト",
     "my-accounts": "アカウント",
     "my-accounts-empty": "利用可能なアカウントがここに表示されます",
     "my-profile": "マイプロフィール",
@@ -1052,6 +1061,7 @@
     "name-your-community": "コミュニティ名",
     "name-your-community-placeholder": "キャッチーな名前",
     "need-help": "ヘルプが必要ですか？",
+    "negative": "ネガティブ",
     "network": "ネットワーク",
     "network-chain": "ネットワークチェーン",
     "network-details": "ネットワーク詳細",
@@ -1079,6 +1089,7 @@
     "new-puk-description": "新しい12桁のPUKを入力",
     "new-status": "新しいステータス",
     "new-tab": "新しいタブ",
+    "new-ui": "新しいUI",
     "next": "次へ",
     "nickname": "ニックネーム",
     "nickname-description": "ニックネームは、あなたが相手を識別しやすくするために使うものです。相手にはニックネームは知らされません。",
@@ -1217,6 +1228,7 @@
         "other": "ピン留めされたメッセージ"
     },
     "pinned-messages-empty": "ピン留めされたメッセージがここに表示されます。メッセージを固定するには、メッセージを長押しし「ピン」をタップします。",
+    "positive": "ポジティブ",
     "powered-by-paraswap": "Powered by Paraswap",
     "preference": "外観モード",
     "preview-privacy": "プライバシーモードのプレビュー",
@@ -1245,6 +1257,7 @@
     "profile-pic-remove": "写真を削除する",
     "profile-pic-take": "写真を撮る",
     "profile-picture-updated": "プロフィール画像が更新されました",
+    "public": "パブリック",
     "public-channel": "公開チャネル",
     "public-chat": "パブリックチャット",
     "public-chat-description": "興味がある公開チャットに参加してみましょう。誰でも新しい公開チャットを作ることができます。",
@@ -1310,6 +1323,7 @@
     "remove-network": "ネットワークを削除",
     "remove-token": "トークンを削除",
     "removed": "削除されました",
+    "removed-from-contacts": "友だちから削除されました",
     "repeat-pin": "新しいパスコードを再入力",
     "repeat-puk": "新しい12桁のPUKを繰り返します",
     "replying-to": "{{author}}に返信する",
@@ -1335,14 +1349,18 @@
     "rpc-url": "RPCのURL",
     "rpc-usage-copy": "コピー",
     "rpc-usage-filter": "フィルター方法",
+    "rpc-usage-filter-methods": "フィルター方法",
+    "rpc-usage-filtered-total": "{{filtered-total}} of {{total}}",
     "rpc-usage-get-stats": "更新",
     "rpc-usage-info": "RPCの使用状況の統計",
     "rpc-usage-reset": "リセット",
+    "rpc-usage-total": "合計",
     "safe-estimate": "安全な見積",
     "save": "保存",
     "save-password": "パスワードを保存",
     "save-password-unavailable": "パスワードを保存するためにデバイスパスコードを設定",
     "save-password-unavailable-android": "パスワードを保存できません：お使いのデバイスがルート化されているか、必要なセキュリティ機能がありません。",
+    "say-hi": "挨拶しよう",
     "scan-qr": "QRコードをスキャン",
     "scan-qr-code": "ウォレットアドレスのQRコードをスキャン",
     "scan-tokens": "トークンをスキャンする",
@@ -1369,6 +1387,7 @@
     "select-token-to-receive": "受け取るトークンを選択",
     "select-token-to-swap": "スワップするトークンを選択",
     "selected": "選択済み",
+    "send-contact-request-message": "チャットを開始するには友だち追加する必要があります",
     "send-logs": "バグを報告",
     "send-logs-to": "{{email}}にバグを報告",
     "send-message": "メッセージを送信",
