--- a/translations/zh.json
+++ b/translations/zh.json
@@ -1,5 +1,5 @@
 {
-    "You": "您",
+    "You": "你",
     "about-app": "关于",
     "about-key-storage-content": "Status永远不会访问您的密钥。请务必备份您的助记词。如果您丢失了手机，这是找回密钥的唯一方法。",
     "about-key-storage-title": "关于密钥存储",
@@ -12,6 +12,7 @@
     "accept-and-share-address": "同意并分享地址",
     "accept-new-chats-from": "接受新聊天，来自",
     "accept-status-tos-prefix": "我接受Status",
+    "accepted": "已接受",
     "access-existing-keys": "访问现有密钥",
     "access-key": "访问密钥",
     "account-added": "帐户已添加",
@@ -290,6 +291,11 @@
     "connection-with-the-card-lost-setup-text": "要恢复设置，请将卡放到\n手机背面并保持\n卡与手机接触",
     "connection-with-the-card-lost-text": "要继续，请将卡片贴近手机背面",
     "contact-code": "聊天码",
+    "contact-request": "请求加为好友",
+    "contact-request-accepted": "已接受 ✓",
+    "contact-request-declined": "已拒绝 （x）",
+    "contact-request-header": "请求加为好友",
+    "contact-request-pending": "待定...",
     "contact-s": {
         "other": "联系人"
     },
@@ -463,6 +469,7 @@
     "datetime-yesterday": "昨天",
     "decimals": "小数点",
     "decline": "拒绝",
+    "declined": "拒绝",
     "decryption-failed-content": "解密数据时发生错误。您可能需要擦除旧数据并生成一个新帐户。点击“应用”以擦除，或点击“取消”重试",
     "default": "默认",
     "default-assets": "默认的ERC20和ERC721代币",
@@ -640,7 +647,6 @@
     "error-unable-to-get-token-balance": "无法获取代币余额",
     "errors": "错误",
     "eth": "ETH",
-    "ethereum-account": "以太坊帐户",
     "ethereum-address": "以太坊地址",
     "ethereum-node-started-incorrectly-description": "以太坊节点启动配置不正确，应用程序将停止从该条件恢复。已配置的网络ID = {{network-id}} ，实际网络ID = {{fetched-network-id}}",
     "ethereum-node-started-incorrectly-title": "以太坊节点启动不正确",
@@ -958,6 +964,7 @@
     "mailserver-request-retry": "重试请求",
     "mailserver-retry": "重试",
     "mailserver-title": "Status节点",
+    "main-account": "主账户",
     "main-currency": "主要货币",
     "main-networks": "主网",
     "main-wallet": "主钱包",
@@ -1040,6 +1047,7 @@
     "multiaccounts-recover-enter-phrase-text": "输入12、15、18、21或24个单词。 \n单词之间用单个空格分隔。",
     "multiaccounts-recover-enter-phrase-title": "输入您的助记词",
     "mute": "静音",
+    "mutual-contact-requests": "请求加为好友",
     "my-accounts": "我的帐户",
     "my-accounts-empty": "您的可用帐户将显示在此处",
     "my-profile": "我的个人资料",
@@ -1052,6 +1060,7 @@
     "name-your-community": "命名您的社区",
     "name-your-community-placeholder": "容易记住的名称",
     "need-help": "需要帮助？",
+    "negative": "负的",
     "network": "网络",
     "network-chain": "网链",
     "network-details": "网络详细信息",
@@ -1079,6 +1088,7 @@
     "new-puk-description": "输入新的12位PUK码",
     "new-status": "新状态",
     "new-tab": "新选项卡",
+    "new-ui": "新的用户界面",
     "next": "下一步",
     "nickname": "昵称",
     "nickname-description": "昵称可帮助您识别Status中的其他人。 \n只有您可以看到您所添加的昵称",
@@ -1217,6 +1227,7 @@
         "other": " {{count}} 条置顶消息"
     },
     "pinned-messages-empty": "置顶的消息将显示在此处。要置顶消息，请按住它并点击“置顶”",
+    "positive": "正的",
     "powered-by-paraswap": "由 Paraswap 提供支持",
     "preference": "偏好",
     "preview-privacy": "预览隐私模式",
@@ -1245,6 +1256,7 @@
     "profile-pic-remove": "删除照片",
     "profile-pic-take": "拍摄照片",
     "profile-picture-updated": "头像图片已更新",
+    "public": "公共",
     "public-channel": "公共频道",
     "public-chat": "公共聊天",
     "public-chat-description": "加入您感兴趣的公共聊天！任何人都可以创建一个新的公共聊天频道。",
@@ -1310,6 +1322,7 @@
     "remove-network": "删除网络",
     "remove-token": "删除代币",
     "removed": "已删除",
+    "removed-from-contacts": "从联系人中删除",
     "repeat-pin": "重复新的6位数字密码",
     "repeat-puk": "重复新的12位PUK码",
     "replying-to": "回复{{author}}",
@@ -1335,14 +1348,18 @@
     "rpc-url": "RPC URL",
     "rpc-usage-copy": "复制",
     "rpc-usage-filter": "过滤方式",
+    "rpc-usage-filter-methods": "过滤方式",
+    "rpc-usage-filtered-total": "第{{filtered-total}} ，共 {{total}}",
     "rpc-usage-get-stats": "刷新",
     "rpc-usage-info": "RPC使用情况统计",
     "rpc-usage-reset": "重置",
+    "rpc-usage-total": "共计",
     "safe-estimate": "安全估计",
     "save": "保存",
     "save-password": "保存密码",
     "save-password-unavailable": "设置设备码以保存密码",
     "save-password-unavailable-android": "保存密码不可用：您的设备可能已被root或缺少必要的安全功能。",
+    "say-hi": "打个招呼",
     "scan-qr": "扫描二维码",
     "scan-qr-code": "扫描钱包地址的二维码",
     "scan-tokens": "扫描代币",
@@ -1369,6 +1386,7 @@
     "select-token-to-receive": "选择要接收的代币",
     "select-token-to-swap": "选择要交换的代币",
     "selected": "已选择",
+    "send-contact-request-message": "要开始聊天，您们需要成为联系人",
     "send-logs": "报告错误",
     "send-logs-to": "向{{email}}报告错误",
     "send-message": "发送消息",
