--- a/translations/zh_TW.json
+++ b/translations/zh_TW.json
@@ -1,5 +1,5 @@
 {
-    "You": "您",
+    "You": "你",
     "about-app": "關於",
     "about-key-storage-content": "Status永遠不會詢問您的私鑰。確保備份您的種子詞組。如果丟失手機，這是取回金鑰的唯一方法。",
     "about-key-storage-title": "關於金鑰保存",
@@ -12,6 +12,7 @@
     "accept-and-share-address": "接受並分享地址",
     "accept-new-chats-from": "接受來自的新聊天",
     "accept-status-tos-prefix": "我接受Status",
+    "accepted": "已接受",
     "access-existing-keys": "使用既有金鑰",
     "access-key": "使用金鑰",
     "account-added": "帳戶已新增",
@@ -211,7 +212,7 @@
     "chat-key-content": "\"Status\"聊天協議使用加密金鑰傳送和接收有關的訊息。聊天公鑰是您與他人共用的字串，讓他們可以在“Status”中向您傳送訊息。",
     "chat-key-title": "聊天金鑰",
     "chat-link-previews": "聊天連結預覽",
-    "chat-name": "聊天名稱",
+    "chat-name": "聊天名称",
     "chat-name-content": "從聊天鍵中演算法得出的三個隨機詞，會當作聊天中的默認別名。聊天名稱是完全唯一的；沒有其他用戶可以使用相同的三個詞。",
     "chat-name-title": "聊天名稱",
     "chat-notification-preferences": "通知设置",
@@ -290,6 +291,11 @@
     "connection-with-the-card-lost-setup-text": "要恢復設定，\n請將卡置於手機感應處\n並維持不動",
     "connection-with-the-card-lost-text": "要繼續操作，請將卡保持在手機感應處",
     "contact-code": "聊天金鑰",
+    "contact-request": "联络请求",
+    "contact-request-accepted": "已接受 ✓",
+    "contact-request-declined": "已拒绝 （x）",
+    "contact-request-header": "请求加为好友",
+    "contact-request-pending": "待定...",
     "contact-s": {
         "other": "好友名單"
     },
@@ -463,6 +469,7 @@
     "datetime-yesterday": "昨天",
     "decimals": "小數點",
     "decline": "拒絕",
+    "declined": "拒绝",
     "decryption-failed-content": "解密數據時出現錯誤，您可能需要清除舊資料，並建立新的帳戶，請點選“同意”來清除舊資料，或點選“取消”以重試。",
     "default": "預設",
     "default-assets": "預設兼容ERC20和ERC721",
@@ -640,7 +647,6 @@
     "error-unable-to-get-token-balance": "無法獲得代幣餘額",
     "errors": "錯誤",
     "eth": "ETH",
-    "ethereum-account": "以太坊賬戶",
     "ethereum-address": "以太坊地址",
     "ethereum-node-started-incorrectly-description": "乙太坊節點以錯誤的配置啟動，應用程式即將停止。\n已配置的網路ID = {{network-id}} ，實際= {{fetched-network-id}}",
     "ethereum-node-started-incorrectly-title": "乙太坊節點啟動錯誤",
@@ -784,7 +790,7 @@
     "invalid-public-chat-topic": "無效的公開聊天主題",
     "invalid-range": "格式無效，必須介於{{min}}和{{max}}",
     "invalid-username-or-key": "無效的用戶名或聊天密鑰",
-    "invite": "邀請",
+    "invite": "邀请",
     "invite-button": "邀請",
     "invite-chat-accept": "接受",
     "invite-chat-accept-join": "接受並加入",
@@ -958,6 +964,7 @@
     "mailserver-request-retry": "重試",
     "mailserver-retry": "重試",
     "mailserver-title": "Status節點",
+    "main-account": "主账户",
     "main-currency": "主要貨幣",
     "main-networks": "主網路",
     "main-wallet": "主錢包",
@@ -1040,6 +1047,7 @@
     "multiaccounts-recover-enter-phrase-text": "輸入12、15、18、21或24個字詞。 \n用單個空格分隔單詞。",
     "multiaccounts-recover-enter-phrase-title": "輸入您的種子詞組",
     "mute": "靜音",
+    "mutual-contact-requests": "好友请求",
     "my-accounts": "我的帳戶",
     "my-accounts-empty": "您的可用帳戶將顯示在此處",
     "my-profile": "我的個人資料",
@@ -1052,6 +1060,7 @@
     "name-your-community": "請為您的社群命名",
     "name-your-community-placeholder": "容易記憶的名稱",
     "need-help": "需要幫忙？",
+    "negative": "负的",
     "network": "網路",
     "network-chain": "網路鏈",
     "network-details": "網路詳細資訊",
@@ -1079,6 +1088,7 @@
     "new-puk-description": "輸入新的12位數PUK碼",
     "new-status": "新增狀態",
     "new-tab": "新分頁",
+    "new-ui": "新的用户界面",
     "next": "下一個",
     "nickname": "暱稱",
     "nickname-description": "暱稱可以幫助您識別Status中的其他人。 \n只有您才能看到已新增的暱稱",
@@ -1217,6 +1227,7 @@
         "other": " {{count}} 則釘選訊息"
     },
     "pinned-messages-empty": "釘選的訊息將顯示在此。要釘選訊息，請長按該訊息並確認“釘選”",
+    "positive": "正的",
     "powered-by-paraswap": "由 Paraswap 提供",
     "preference": "選擇偏好",
     "preview-privacy": "預覽隱私模式",
@@ -1245,6 +1256,7 @@
     "profile-pic-remove": "移除照片",
     "profile-pic-take": "拍攝照片",
     "profile-picture-updated": "個人資料圖片已更新",
+    "public": "公開",
     "public-channel": "公共頻道",
     "public-chat": "公開的聊天",
     "public-chat-description": "加入您感興趣的公開聊天！任何人都可以建立一個新的。",
@@ -1310,6 +1322,7 @@
     "remove-network": "移除網路",
     "remove-token": "刪除代幣",
     "removed": "已移除",
+    "removed-from-contacts": "从联系人中删除",
     "repeat-pin": "重複新的六位數密碼",
     "repeat-puk": "再次確認新的12位數PUK",
     "replying-to": "回覆給{{author}}",
@@ -1335,14 +1348,18 @@
     "rpc-url": "RPC URL",
     "rpc-usage-copy": "複製",
     "rpc-usage-filter": "過濾方式",
+    "rpc-usage-filter-methods": "過濾方式",
+    "rpc-usage-filtered-total": "第{{filtered-total}} ，共 {{total}}",
     "rpc-usage-get-stats": "重新整理",
     "rpc-usage-info": "RPC使用情況統計",
     "rpc-usage-reset": "重置",
+    "rpc-usage-total": "共计",
     "safe-estimate": "安全估計",
     "save": "儲存",
     "save-password": "保存密碼",
     "save-password-unavailable": "設定裝置密碼以儲存密碼",
     "save-password-unavailable-android": "無法使用“儲存密碼”：您的設備可能已開啟Root權限，或缺少必要的安全功能。",
+    "say-hi": "打个招呼",
     "scan-qr": "掃描QR碼",
     "scan-qr-code": "掃描含有錢包地址的QR碼",
     "scan-tokens": "掃描代幣",
@@ -1369,6 +1386,7 @@
     "select-token-to-receive": "選擇要接收的代幣",
     "select-token-to-swap": "選擇要交換的代幣",
     "selected": "已選",
+    "send-contact-request-message": "要开始聊天，您需要成为联系人",
     "send-logs": "報告錯誤",
     "send-logs-to": "向{{email}}報告錯誤",
     "send-message": "發訊息",
