--- a/translations/ru.json
+++ b/translations/ru.json
@@ -12,6 +12,7 @@
     "accept-and-share-address": "Принять и поделиться адресом",
     "accept-new-chats-from": "Принимать новые чаты от",
     "accept-status-tos-prefix": "Я принимаю Status",
+    "accepted": "Принято",
     "access-existing-keys": "Доступ к существующим ключам",
     "access-key": "Ключ доступа",
     "account-added": "Аккаунт добавлен",
@@ -71,6 +72,7 @@
     "already-have-asset": "У вас есть актив с таким адресом",
     "amount": "Сумма",
     "anyone": "Любой",
+    "app-commit": "Фиксация приложения",
     "appearance": "Внешний вид",
     "apply": "Применить",
     "approve": "Одобрить",
@@ -214,12 +216,13 @@
     "chat-key-content": "Протокол работы чатов приложения Status формирует прием и отправку сообщений с использованием ключей шифрования. Публичный код контакта – это строка символов, которой вы делитесь с другими пользователями, чтобы они имели возможность отправить вам сообщение в приложении.",
     "chat-key-title": "Ключ чата",
     "chat-link-previews": "Предварительный просмотр ссылок в чате",
-    "chat-name": "Имя в чате",
+    "chat-name": "Имя чата",
     "chat-name-content": "Набор из трех случайных слов, генерируется алгоритмическим путем на основе вашего кода контакта. Полученное имя используется по умолчанию в качестве псевдонима. Имена полностью уникальны и не могут состоять из трех одинаковых слов.",
     "chat-name-title": "Имя в чате",
     "chat-notification-preferences": "Настройки уведомлений",
     "chat-settings": "Настройки чата",
     "chats": "Чаты",
+    "check-on-block-explorer": "Проверьте в обозревателе блоков",
     "check-on-opensea": "Проверить на OpenSea",
     "check-your-recovery-phrase": "Проверьте свою сид-фразу",
     "choose-actions": "Выбор действия",
@@ -233,6 +236,7 @@
     "clear-history-confirmation": "Очистить историю?",
     "clear-history-confirmation-content": "Вы действительно хотите удалить историю этого чата?",
     "clear-history-title": "Очистить историю?",
+    "cleared-chat-description-public": "Здесь было тихо. Начать разговор или",
     "close": "Закрыть",
     "close-all": "Закрыть все",
     "close-app-button": "Подтвердить",
@@ -249,6 +253,7 @@
     "community-color-placeholder": "Выберите цвет",
     "community-edit-title": "Изменение сообщества",
     "community-emoji-thumbnail-title": "Черновик",
+    "community-image-delete": "Пустой",
     "community-image-pick": "Выберите изображение",
     "community-image-remove": "Удалить",
     "community-image-take": "Сделать фото",
@@ -289,11 +294,17 @@
     "connected-to": "Установлено подключение к",
     "connecting": "Подключение...",
     "connecting-requires-login": "Подключение к другой сети требует входа в систему",
+    "connection-request": "Запрос на подключение",
     "connection-status": "Состояние подключения",
     "connection-with-the-card-lost": "Соединение с картой потеряно",
     "connection-with-the-card-lost-setup-text": "Для возобновления настройки приложите \nкарту к задней панели телефона и удерживайте \nее в таком состоянии",
     "connection-with-the-card-lost-text": "Чтобы продолжить, приложите карту к задней панели телефона.",
     "contact-code": "Код контакта",
+    "contact-request": "Запрос контакта",
+    "contact-request-accepted": "Принято",
+    "contact-request-declined": "Отклонено ⓧ",
+    "contact-request-header": "👋 Запросы на контакты",
+    "contact-request-pending": "В ожидании",
     "contact-s": {
         "zero": "контактов",
         "one": "контакт",
@@ -503,6 +514,7 @@
     "datetime-yesterday": "вчера",
     "decimals": "Количество знаков после запятой",
     "decline": "Отклонить",
+    "declined": "Отклонено",
     "decryption-failed-content": "При расшифровке ваших данных произошла ошибка. Возможно, вам потребуется стереть старые данные и создать новый аккаунт. Нажмите «Применить» для удаления или «Отмена» для повторной попытки.",
     "default": "По умолчанию",
     "default-assets": "Стандарты токенов ERC20 и ERC721",
@@ -544,6 +556,7 @@
     "disable-all": "Отключить все",
     "disable-later-in-settings": "Вы сможете отключить это потом в Настройках ",
     "disabled": "Отключен",
+    "disconnect": "Отключить",
     "disconnected": "Чат не в сети",
     "discover": "Откройте для себя",
     "dismiss": "Отклонить",
@@ -551,6 +564,7 @@
     "done": "Готово",
     "dont-ask": "Больше не спрашивать",
     "edit": "Изменить",
+    "edit-categories": "Изменить категории",
     "edit-channel-title": "Редактировать канал",
     "edit-chats": "Редактировать чаты",
     "edit-community": "Редактировать сообщество",
@@ -627,9 +641,11 @@
     "ens-username-connection-confirmation": "{{username}} будет подключено, как только транзакция будет завершена.",
     "ens-username-hints": "Как минимум 4 символа. Только латинские буквы, цифры и строчные буквы.",
     "ens-username-invalid": "Только буквы и цифры.",
+    "ens-username-invalid-name-warning": "Процесс регистрации одного из ваших имен ens завершился в недействительном состоянии. НЕ ИСПОЛЬЗУЙТЕ это имя для операций с кошельком и обратитесь в нашу службу поддержки по адресу support@status.im.",
     "ens-username-owned": "✓ Имя пользователя принадлежит вам.",
     "ens-username-owned-continue": "Если вы продолжите, это имя пользователя будет привязано к вашему коду контакта.",
     "ens-username-registration-confirmation": "Отлично! Вы станете владельцем {{username}}, как только транзакция будет завершена.",
+    "ens-username-registration-invalid": "Внимание! Процесс регистрации завершился в недействительном состоянии. НЕ ИСПОЛЬЗУЙТЕ это имя для операций с кошельком и обратитесь в нашу службу поддержки по адресу support@status.im.",
     "ens-username-taken": "Это имя пользователя уже занято :(",
     "ens-username-you-can-follow-progress": "Вы можете следить за ходом выполнения в разделе вашего кошелька «История транзакций».",
     "ens-usernames": "ENS-имена",
@@ -676,7 +692,6 @@
     "error-unable-to-get-token-balance": "Не удалось получить баланс токенов",
     "errors": "Ошибки",
     "eth": "ETH",
-    "ethereum-account": "Аккаунт Ethereum",
     "ethereum-address": "Адрес Ethereum",
     "ethereum-node-started-incorrectly-description": "Нода Ethereum была запущена с неверной конфигурацией, приложение будет остановлено для восстановления после этого состояния. Сконфигурированный идентификатор сети = {{network-id}}, фактический = {{fetched-network-id}}",
     "ethereum-node-started-incorrectly-title": "Нода Ethereum была запущена неправильно",
@@ -786,6 +801,7 @@
     "increase-gas": "Увеличить газ",
     "initialization": "Инициализация",
     "install": "↓ Установить",
+    "insufficient-balance-to-cover-fee": "недостаточно средств для покрытия комиссии за транзакцию",
     "intro-message1": "Добро пожаловать в Status!\nНажмите на это сообщение, чтобы задать пароль и начать.",
     "intro-privacy-policy-note1": "Status не собирает ваши личные данные и не извлекает из них выгоду . Продолжая, вы соглашаетесь с",
     "intro-privacy-policy-note2": " нашей политикой конфиденциальности",
@@ -959,6 +975,7 @@
     "load-more-timeline": "↓ Показать больше",
     "loading": "Загрузка...",
     "local-notifications": "Местные уведомления",
+    "local-notifications-subtitle": "Включить фоновые службы",
     "lock-app-with": "Блокировать приложение с помощью",
     "log-level": "Уровень ведения журнала",
     "log-level-settings": "Настройки уровня ведения журнала",
@@ -992,11 +1009,13 @@
     "mailserver-request-retry": "Повторить запрос",
     "mailserver-retry": "Повторить",
     "mailserver-title": "Нода Status",
+    "main-account": "Основной аккаунт",
     "main-currency": "Основная валюта",
     "main-networks": "Основные сети",
     "main-wallet": "Основной кошелек",
     "mainnet-network": "Основная сеть",
     "make-admin": "Сделать администратором",
+    "manage-connections": "Управление подключениями из приложений",
     "manage-keys-and-storage": "Управление ключами и хранилищем",
     "mark-all-read": "Отметить всё как прочитанное",
     "master-account": "Главный аккаунт",
@@ -1081,6 +1100,7 @@
     "multiaccounts-recover-enter-phrase-text": "Введите 12, 15, 18, 21 или 24 слова. \nРазделяйте слова одним пробелом.",
     "multiaccounts-recover-enter-phrase-title": "Введите свою сид-фразу",
     "mute": "Без звука",
+    "mutual-contact-requests": "Запросы на взаимные контакты",
     "my-accounts": "Мои аккаунты",
     "my-accounts-empty": "Доступные аккаунты появятся здесь",
     "my-profile": "Мой профиль",
@@ -1093,6 +1113,7 @@
     "name-your-community": "Назовите ваше сообщество",
     "name-your-community-placeholder": "Запоминающееся имя",
     "need-help": "Нужна помощь?",
+    "negative": "Отрицательный",
     "network": "Сеть",
     "network-chain": "Тип сети",
     "network-details": "Сведения о сети",
@@ -1120,6 +1141,7 @@
     "new-puk-description": "Введите новый 12-значный PUK",
     "new-status": "Новый статус",
     "new-tab": "Новая вкладка",
+    "new-ui": "Новый интерфейс",
     "next": "Далее",
     "nickname": "Псевдоним",
     "nickname-description": "Псевдонимы помогут вам идентифицировать других в Status.\nТолько вы можете видеть псевдонимы, добавленные вами.",
@@ -1184,6 +1206,7 @@
     "open-in-new-tab": "Открыть в новой вкладке",
     "open-membership": "Открытое участие",
     "open-nfc-settings": "Открыть настройки NFC",
+    "open-on-block-explorer": "Открыть в обозревателе блоков",
     "opening-buy-crypto": "Открытие {{site}}...",
     "optimal": "Оптимальный",
     "optional": "опционально",
@@ -1261,6 +1284,7 @@
         "other": "другое"
     },
     "pinned-messages-empty": "Закрепленные сообщения появятся здесь. Чтобы закрепить сообщение, нажмите и удерживайте его, а затем нажмите «Закрепить».",
+    "positive": "Положительный",
     "powered-by-paraswap": "При поддержке Paraswap",
     "preference": "Темы",
     "preview-privacy": "Предпросмотр в приватном режиме",
@@ -1289,6 +1313,7 @@
     "profile-pic-remove": "Удалить фото",
     "profile-pic-take": "Сделать фото",
     "profile-picture-updated": "Фото профиля обновлено",
+    "public": "Публичный",
     "public-channel": "Публичный канал",
     "public-chat": "Публичный чат",
     "public-chat-description": "Присоединяйтесь к публичным чатам по интересам. Любой пользователь может создать новый чат.",
@@ -1339,9 +1364,12 @@
     "reduced-tip": "приоритет чаевых будет уменьшен",
     "refresh": "Обновить",
     "registered": "зарегистрированный",
+    "reject": "Отклонить",
     "reject-and-delete": "Отклонить и удалить",
     "remember-me": "Запомнить меня",
     "remind-me-later": "Показать еще раз",
+    "remote-notifications": "Удаленные уведомления",
+    "remote-notifications-subtitle": "Включите push-уведомления Google",
     "remove": "Удалить",
     "remove-favourite": "Удалить из избранного",
     "remove-from-chat": "Удалить из чата",
@@ -1351,6 +1379,7 @@
     "remove-network": "Удалить сеть",
     "remove-token": "Удалить токен",
     "removed": "удалено",
+    "removed-from-contacts": "Удалено из контактов",
     "repeat-pin": "Повторите новый 6-значный код доступа",
     "repeat-puk": "Повторите новый 12-значный PUK",
     "replying-to": "Ответ {{author}}",
@@ -1376,14 +1405,18 @@
     "rpc-url": "URL-адрес RPC",
     "rpc-usage-copy": "Копировать",
     "rpc-usage-filter": "Методы фильтрации",
+    "rpc-usage-filter-methods": "Методы фильтрации",
+    "rpc-usage-filtered-total": "{{filtered-total}} из {{total}}",
     "rpc-usage-get-stats": "Обновить",
     "rpc-usage-info": "Статистика использования RPC",
     "rpc-usage-reset": "Сброс",
+    "rpc-usage-total": "Всего",
     "safe-estimate": "Безопасная оценка",
     "save": "Сохранить",
     "save-password": "Сохранить пароль",
     "save-password-unavailable": "Установите код доступа на ваше устройство, чтобы сохранить пароль",
     "save-password-unavailable-android": "Сохранить пароль невозможно: устройство было подвергнуто рутингу (rooting) или не имеет необходимых функций безопасности.",
+    "say-hi": "Поздороваться",
     "scan-qr": "Сканировать QR-код",
     "scan-qr-code": "Сканировать QR-код с адресом кошелька",
     "scan-tokens": "Сканировать токены",
@@ -1410,9 +1443,11 @@
     "select-token-to-receive": "Выберите токен для получения",
     "select-token-to-swap": "Выберите токен для обмена",
     "selected": "Выбранные",
+    "send-contact-request-message": "Для начала чата вам нужно стать контактами",
     "send-logs": "Сообщить об ошибке",
     "send-logs-to": "Сообщить об ошибке по адресу электронной почты {{email}}",
     "send-message": "Отправить сообщение",
+    "send-push-notifications": "Отправлять push-уведомления",
     "send-push-notifications-description": "Если данная функция отключена, пользователь не получит уведомление о новом сообщении.",
     "send-request": "Послать запрос",
     "send-request-amount": "Сумма",
@@ -1676,6 +1711,12 @@
     "wallet-backup-recovery-title": "Сделайте резервную копию вашей сид-фразы",
     "wallet-choose-recipient": "Выбрать получателя",
     "wallet-collectibles": "Коллекции",
+    "wallet-connect": "Подключить кошелек",
+    "wallet-connect-2.0": "Подключить кошелек 2.0",
+    "wallet-connect-app-connected": "подключено",
+    "wallet-connect-go-back": "Вернитесь в свой браузер или децентрализованное приложение",
+    "wallet-connect-proposal-description": "Подключившись, вы позволяете {{name}} получить адрес вашей учетной записи и включить Web3.",
+    "wallet-connect-proposal-title": "Хочу подключиться к вашему кошельку",
     "wallet-insufficient-funds": "Недостаточно средств",
     "wallet-insufficient-gas": "Недостаточно ETH, чтобы заплатить за газ",
     "wallet-invalid-address": "Недействительный адрес: \n {{data}}",
@@ -1684,6 +1725,7 @@
     "wallet-key-content": "Шестнадцатеричный адрес из 64 знаков, начинающийся с «0x». Данный тип адресов основывается на блокчейне Ethereum. Это общедоступный адрес вашего аккаунта, который вы можете сообщать другим пользователям, чтобы получать от них средства в криптовалюте, функционирующей на аналогичном блокчейне. Альтернативные наименования: «адрес Ethereum» и «адрес кошелька ERC-20».",
     "wallet-key-title": "Адрес аккаунта",
     "wallet-manage-accounts": "Управлять аккаунтами",
+    "wallet-manage-app-connections": "Управление подключениями приложений",
     "wallet-manage-assets": "Управлять активами",
     "wallet-request": "Запрос",
     "wallet-send": "Отправить",
